--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,13 +2,52 @@ body {
 	background-image: url('../img/1.jpg');
 	background-attachment: fixed;
 	background-size: cover;
+	font-family: 'open-sans', arial;
 }
 
 .formulario {
 	background-color: white;
-	width: 400px;
+	width: 420px;
+	border-radius: 25px;
 }
 
 .contenedor {
-	padding: 10px 40px 40px 40px;
+	padding: 20px 40px 40px 40px;
+}
+
+h1 {
+	margin-top: 0px;
+	margin-bottom: 10px;
+	color: #00112c;
+}
+
+h2 {
+	margin-top: 0px;
+	margin-bottom: 10px;
+	color: #be0027;
+}
+label{
+	font-size: 18px;
+	color: #008374;
+}
+
+.preguntas{
+	margin-top: 0px;
+	margin-bottom: 10px;
+}
+
+.btn-Enviar {
+	background: #00112c;
+	color: #fff;
+	font-size: 16px;
+	text-decoration: none;
+	padding: 15px 20px;
+	display: block;
+	margin: 0px 10px;
+	border: none;
+
+}
+
+.btn-Enviar:hover {
+	opacity: .8;
 }
